--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                     <div id="companyFilter" class="custom-multiselect"></div>
                 </div>
                 
-                <button id="displayToggleBtn" class="btn btn-sm btn-outline-secondary">Display: Ranking</button>
                 <button id="highlightAboitizBtn" class="btn btn-sm btn-outline-dark">Highlight AboitizPower</button>
 
                 <div class="vr mx-2"></div>
@@ -54,7 +53,8 @@
         </div>
 
         <div id="dashboardGrid"></div>
-        <div id="legend-grid"></div> <div id="summary-totals-grid" class="mt-4"></div>
+        <div id="legend-grid"></div>
+        <div id="summary-totals-grid" class="mt-4"></div>
     </div>
     
     <div class="modal fade" id="saveScenarioModal" tabindex="-1" aria-labelledby="saveScenarioModalLabel" aria-hidden="true">
@@ -127,5 +127,5 @@
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="main.js"></script>
-</body>
+    </body>
 </html>
